# CSCI-2275

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  MaxBargan.xlsx  MaxProfit.xlsx  driver.cpp  main.cpp
Assignment2/: CMakeLists.txt  action.txt  book.cpp  book.h  cd.cpp  cd.h  inventory.txt  item.cpp  item.h  magazine.cpp  magazine.h  main.cpp
Assignment3/: CMakeLists.txt  WordAnalysis.cpp  WordAnalysis.h  main.cpp
Assignment4/: CMakeLists.txt  CommunicationsNetwork.cpp  CommunicationsNetwork.h  main.cpp
Assignment5/: CMakeLists.txt  CommunicationNetwork-1.h  CommunicationsNetwork.cpp  CommunicationsNetwork.h  LinkedList.cpp  Queue.cpp  main.cpp
Assignment6/: CMakeLists.txt  MovieTree.cpp  MovieTree.h  main.cpp
Assignment7/: CMakeLists.txt  MovieTree.cpp  MovieTree.h  heap.cpp  main.cpp
Assignment8/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
Assignment9/: CMakeLists.txt  CSCI 2275 Final Project Proposal.docx  Graph.cpp  Graph.h  main.cpp
Class/: CMakeLists.txt
FinalProjectDataCompression/: CMakeLists.txt  CSCI 2275 Final Project.pptx  Huffman.cpp  Huffman.h  LZW.cpp  LZW.h  RunLength.cpp  RunLength.h  Util.cpp  main.cpp
GenericBST/: BST.cpp  BSTree.cpp  CMakeLists.txt  RecitationBST.cpp  main.cpp
GenericHeap/: CMakeLists.txt  GenericHeap.cpp  heapsTests.cpp  main.cpp
GenericStackAndQueue/: CMakeLists.txt  GenericQueue.cpp  GenericStack.cpp  main.cpp
GraphsLectureAssignment/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
HashTable/: CMakeLists.txt  main.cpp
L10/: CMakeLists.txt  main.cpp
Testing/: CMakeLists.txt  main.cpp
(+60 files in other folders)
